# Qnx_Hypervisor_rbye

./: .gitignore  .gitmodules  Makefile  README.md  qsc_install_packages.list  rpi4-hypervisor.build  rpi4-hypervisor.build.bak
conf/display/: graphics-headless.conf  graphics-host-rpi5.conf  graphics-virtio-mmio.conf  graphics-virtio-start.sh  graphics-virtual-display.conf  host-graphics-start.sh
conf/wifi/: README.md  qwdi_wifi.conf  wifi-start.sh  wpa_supplicant.conf
guests/: linux.qvmconf
guests/linux-guest/: linux.qvmconf
guests/qnx-guest/: qnx-guest.qvmconf  qnx800-guest-1.build  qnx800-guest-1.qvmconf
guests/qnx-guest-2/: qnx800-guest-2.qvmconf
linux-guest/: linux.qvmconf
patches/motor_data_producer/: spi_stm32.patch
patches/qt_cluster/: qt_cluster.patch
qnx_guests/: Makefile  manifest  readme.txt  source.xml
qnx_guests/binary_files_with_symbols/aarch64le/boot/sys/: startup-armv8_fm.sym
qnx_guests/binary_files_with_symbols/aarch64le/sbin/: shmem-guest.sym  wdtkick.sym
qnx_guests/binary_files_with_symbols/images/guest-1/: startup-armv8_fm.qnx800-guest-1.sym
qnx_guests/images/: common-definitions.m4  common.mk
qnx_guests/images/guest-1/: Makefile  definitions.m4  qnx-guest-1.qvmconf  qnx800-guest-1.build  rootfs.build
qnx_guests/images/guest-2/: Makefile  definitions.m4  qnx-guest-2.qvmconf  qnx800-guest-2.build
qnx_guests/prebuilt/aarch64le/boot/sys/: startup-armv8_fm
qnx_guests/prebuilt/aarch64le/sbin/: shmem-guest  wdtkick
qnx_guests/src/apps/hypervisor/demos/shmem-guest/: common.mk  ghstest.c  guest_shm.h
qnx_guests/src/hardware/startup/boards/armv8_fm/: armv8_fm_startup.h  board_smp.c  build  init_asinfo.c  main.c
qnx_guests/src/hardware/startup/lib/: print_sysp.c  print_sysp.h
qnx_host/: Makefile
qnx_host/images/: Makefile  config.txt  definitions.m4  disk.img.bmap  part_dos_boot.build  part_qnx_data.build  rpi4-hypervisor.build  rpi4.build11  rpi5-hypervisor.build  rpi5-part_dos_boot.build
src/: Makefile  build-deps.sh
src/QT/: Makefile
src/QT/Demo_APP/: CMakeLists.txt  Makefile  README.md  deploy_qt.cmake  main.cpp  main.qml
src/QT/qt6-qnx-libs/: Makefile  README.md
src/QT/qt6-qnx-libs/cmake/: toolchain_qnx_aarch64le.cmake
src/QT/qt6-qnx-libs/scripts/: build.sh  configure.sh  download.sh
src/frame_router/: Makefile  fb_guest.c  fb_host.c  fb_test.c  shm_proto.h
src/giga_spi/: config.c  config.h  config.json  motor_controller  motor_controller.c  motor_controller_debug  motor_controller_debug.c  motor_monitor  motor_monitor.c  motor_wire.h  pd_test  pd_test.c  rpi_gpio.c  spi_probe  spi_probe.c
src/giga_spi_8adc/: Makefile  config.c  config.json  motor_controller.c  motor_monitor.c  motor_wire.h  rpi_spi.c  rpi_spi.h
src/motor_ai_client/: Makefile  README.md
src/motor_ai_client/client/: CMakeLists.txt  vsomeip_multicast.json
src/motor_ai_client/client/src/: MotorDataClient.cpp  ai_result_shm.h  ai_result_writer.c  ai_result_writer.h  shm_reader.c  shm_reader.h
src/motor_ai_client/interface/: commonapi4someip.ini
src/motor_ai_server/: Makefile  README.md
src/motor_ai_server/interface/: MotorDataService.fdepl  MotorDataService.fidl
src/motor_ai_server/server/: CMakeLists.txt  vsomeip_multicast.json
src/motor_ai_server/server/src/: MotorDataService.cpp  MotorDataStubImpl.cpp  MotorDataStubImpl.hpp
src/oss_packages/: Makefile  packages.txt
src/rpi-gpio/: 0001-hypervisor-support-env-var.patch  CMakeLists.txt  Makefile  README.md  common.cmake
src/rpi-gpio/resmgr/: .cproject  .project  CMakeLists.txt  event.c  main.c  pinfo.in  pwm.c  rp1_gpio.c  rpi2711_gpio.c  rpi_gpio.h  rpi_gpio.use  rpi_gpio_priv.h
src/shm_sender/: Makefile  chunker.hpp  main.cpp  motor_shm.h  shm_reader_c.c  shm_reader_c.h  test_producer.c
src/someip/: Makefile
src/someip/commonapi-qnx/: Makefile  README.md
src/someip/commonapi-qnx/scripts/: build.sh  download.sh  env.sh  patch.sh
src/someip/commonapi_client_server/: Makefile  README.md
src/someip/commonapi_client_server/client/: CMakeLists.txt  vsomeip.json  vsomeip_client_mc.json  vsomeip_multicast.json
src/someip/commonapi_client_server/client/src/: HelloWorldClient.cpp
src/someip/commonapi_client_server/interface/: HelloWorld.fdepl  HelloWorld.fidl  commonapi4someip.ini
src/someip/commonapi_client_server/server/: CMakeLists.txt  vsomeip.json  vsomeip_multicast.json  vsomeip_server_mc.json
src/someip/commonapi_client_server/server/src/: HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
src/spi_loopback/: Makefile  spi_loopback.c
src/vdev-virtio-gpu/: LICENSE  Makefile  README.md  build-image.sh  edid_build.inc  edid_selftest.c  libvirglrenderer.so.1  libvirglrenderer.so.1.11.0  vdev-virtio-gpu.c  vdev-virtio-gpu.c.orig  virtio_gpu.h
src/vdev-virtio-gpu/example/: README.md
src/vdev-virtio-gpu/example/host/: guest.qvmconf  start-demo.sh
src/vdev-virtio-gpu/patches/: README.md  repo.patch  virglrenderer-qnx.patch
src/virglrenderer/: Makefile  config.h.meson  meson.build  meson_options.txt
src/virglrenderer/server/: render_common.c  render_state.c  render_worker.c
src/virglrenderer/src/: meson.build  virglrenderer.c
src/virglrenderer/src/drm/: drm_context.c  drm_context.h
src/virglrenderer/src/drm/amdgpu/: amdgpu_renderer.c
src/virglrenderer/src/mesa/util/: anon_file.c  detect_os.h  detect_os.h.orig  os_misc.c  os_misc.c.rej
src/virglrenderer/src/proxy/: proxy_renderer.c  proxy_server.c  proxy_server.h
src/virglrenderer/src/venus/: vkr_allocator.c  vkr_common.h  vkr_device.c  vkr_device.h  vkr_device_memory.c  vkr_instance.c  vkr_library.c  vkr_library.h  vkr_metal_helpers.h  vkr_metal_helpers.m  vkr_physical_device.c  vkr_physical_device.h
src/virglrenderer/src/vrend/: vrend_blitter.c  vrend_renderer.c  vrend_renderer.h  vrend_shader.c  vrend_winsys.c  vrend_winsys.c.rej  vrend_winsys_egl.c  vrend_winsys_egl.c.rej  vrend_winsys_gbm.c  vrend_winsys_gbm.c.rej
utils/: download.mk  rp5_dtb_scan.py  rpi_address_calc.py
utils/bins/: fb_host
utils/confs/: pf.conf
(+16 files in other folders)
